modified:   library1.py 	modified:   preprocess.ipynb

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -45,8 +45,8 @@
     "preprocess_pipe = Pipeline([\n",
     "    ('feature_selector', VolTempSelector('M')),\n",
     "    ('missing_value', handleMissingValue()),\n",
-    "    ('minmaxscaler', StandardScaler()),\n",
     "    ('pca', PCA(n_components = 3)),\n",
+    "    ('minmax_scaler', MinMaxScaler()),\n",
     "    ('component_selector', ComponentSelector(3))\n",
     "])"
    ]
