modified:   preprocess.ipynb

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,33 +85,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>4.514794</td>\n",
-       "      <td>13.247922</td>\n",
-       "      <td>-0.138444</td>\n",
+       "      <td>0.998576</td>\n",
+       "      <td>0.999115</td>\n",
+       "      <td>0.192774</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4.514314</td>\n",
-       "      <td>13.246869</td>\n",
-       "      <td>-0.152812</td>\n",
+       "      <td>0.998621</td>\n",
+       "      <td>0.998883</td>\n",
+       "      <td>0.165573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4.516691</td>\n",
-       "      <td>13.247578</td>\n",
-       "      <td>-0.152977</td>\n",
+       "      <td>0.998620</td>\n",
+       "      <td>0.998942</td>\n",
+       "      <td>0.165567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4.515133</td>\n",
-       "      <td>13.248020</td>\n",
-       "      <td>-0.138428</td>\n",
+       "      <td>0.998576</td>\n",
+       "      <td>0.999123</td>\n",
+       "      <td>0.192773</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4.511028</td>\n",
-       "      <td>13.262384</td>\n",
-       "      <td>-0.125167</td>\n",
+       "      <td>0.999189</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.214066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -121,33 +121,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11362</th>\n",
-       "      <td>16.324575</td>\n",
-       "      <td>-1.661410</td>\n",
-       "      <td>-0.215947</td>\n",
+       "      <td>0.097391</td>\n",
+       "      <td>0.543434</td>\n",
+       "      <td>0.039768</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11363</th>\n",
-       "      <td>16.325252</td>\n",
-       "      <td>-1.661199</td>\n",
-       "      <td>-0.216110</td>\n",
+       "      <td>0.097391</td>\n",
+       "      <td>0.543451</td>\n",
+       "      <td>0.039765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11364</th>\n",
-       "      <td>16.322866</td>\n",
-       "      <td>-1.646114</td>\n",
-       "      <td>-0.226651</td>\n",
+       "      <td>0.098000</td>\n",
+       "      <td>0.544580</td>\n",
+       "      <td>0.018894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11365</th>\n",
-       "      <td>16.326309</td>\n",
-       "      <td>-1.661053</td>\n",
-       "      <td>-0.210290</td>\n",
+       "      <td>0.097396</td>\n",
+       "      <td>0.543462</td>\n",
+       "      <td>0.050241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11366</th>\n",
-       "      <td>16.324907</td>\n",
-       "      <td>-1.661304</td>\n",
-       "      <td>-0.215962</td>\n",
+       "      <td>0.097391</td>\n",
+       "      <td>0.543442</td>\n",
+       "      <td>0.039767</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -155,23 +155,23 @@
        "</div>"
       ],
       "text/plain": [
-       "               0          1         2\n",
-       "0       4.514794  13.247922 -0.138444\n",
-       "1       4.514314  13.246869 -0.152812\n",
-       "2       4.516691  13.247578 -0.152977\n",
-       "3       4.515133  13.248020 -0.138428\n",
-       "4       4.511028  13.262384 -0.125167\n",
-       "...          ...        ...       ...\n",
-       "11362  16.324575  -1.661410 -0.215947\n",
-       "11363  16.325252  -1.661199 -0.216110\n",
-       "11364  16.322866  -1.646114 -0.226651\n",
-       "11365  16.326309  -1.661053 -0.210290\n",
-       "11366  16.324907  -1.661304 -0.215962\n",
+       "              0         1         2\n",
+       "0      0.998576  0.999115  0.192774\n",
+       "1      0.998621  0.998883  0.165573\n",
+       "2      0.998620  0.998942  0.165567\n",
+       "3      0.998576  0.999123  0.192773\n",
+       "4      0.999189  1.000000  0.214066\n",
+       "...         ...       ...       ...\n",
+       "11362  0.097391  0.543434  0.039768\n",
+       "11363  0.097391  0.543451  0.039765\n",
+       "11364  0.098000  0.544580  0.018894\n",
+       "11365  0.097396  0.543462  0.050241\n",
+       "11366  0.097391  0.543442  0.039767\n",
        "\n",
        "[11367 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,33 +214,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.295289</td>\n",
-       "      <td>27.793370</td>\n",
-       "      <td>0.122859</td>\n",
+       "      <td>0.999474</td>\n",
+       "      <td>0.599393</td>\n",
+       "      <td>0.124659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.295453</td>\n",
-       "      <td>27.800743</td>\n",
-       "      <td>0.130958</td>\n",
+       "      <td>0.999997</td>\n",
+       "      <td>0.600814</td>\n",
+       "      <td>0.096741</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.298489</td>\n",
-       "      <td>27.799307</td>\n",
-       "      <td>0.130698</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.597703</td>\n",
+       "      <td>0.187976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.302083</td>\n",
-       "      <td>27.793383</td>\n",
-       "      <td>0.127732</td>\n",
+       "      <td>0.999464</td>\n",
+       "      <td>0.597970</td>\n",
+       "      <td>0.079366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.303425</td>\n",
-       "      <td>27.795756</td>\n",
-       "      <td>0.118855</td>\n",
+       "      <td>0.999486</td>\n",
+       "      <td>0.599486</td>\n",
+       "      <td>0.111835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -250,33 +250,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5011</th>\n",
-       "      <td>-23.802764</td>\n",
-       "      <td>7.864126</td>\n",
-       "      <td>-0.259379</td>\n",
+       "      <td>0.001073</td>\n",
+       "      <td>0.994540</td>\n",
+       "      <td>0.596380</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5012</th>\n",
-       "      <td>-23.807158</td>\n",
-       "      <td>7.853838</td>\n",
-       "      <td>-0.264659</td>\n",
+       "      <td>0.000547</td>\n",
+       "      <td>0.990520</td>\n",
+       "      <td>0.691322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5013</th>\n",
-       "      <td>-23.802496</td>\n",
-       "      <td>7.857575</td>\n",
-       "      <td>-0.260426</td>\n",
+       "      <td>0.000527</td>\n",
+       "      <td>0.991591</td>\n",
+       "      <td>0.632839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5014</th>\n",
-       "      <td>-23.808956</td>\n",
-       "      <td>7.855669</td>\n",
-       "      <td>-0.260465</td>\n",
+       "      <td>0.000519</td>\n",
+       "      <td>0.992506</td>\n",
+       "      <td>0.632940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5015</th>\n",
-       "      <td>-23.806827</td>\n",
-       "      <td>7.846688</td>\n",
-       "      <td>-0.266754</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.988305</td>\n",
+       "      <td>0.659860</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -284,29 +284,29 @@
        "</div>"
       ],
       "text/plain": [
-       "              0          1         2\n",
-       "0      0.295289  27.793370  0.122859\n",
-       "1      0.295453  27.800743  0.130958\n",
-       "2      0.298489  27.799307  0.130698\n",
-       "3      0.302083  27.793383  0.127732\n",
-       "4      0.303425  27.795756  0.118855\n",
-       "...         ...        ...       ...\n",
-       "5011 -23.802764   7.864126 -0.259379\n",
-       "5012 -23.807158   7.853838 -0.264659\n",
-       "5013 -23.802496   7.857575 -0.260426\n",
-       "5014 -23.808956   7.855669 -0.260465\n",
-       "5015 -23.806827   7.846688 -0.266754\n",
+       "             0         1         2\n",
+       "0     0.999474  0.599393  0.124659\n",
+       "1     0.999997  0.600814  0.096741\n",
+       "2     1.000000  0.597703  0.187976\n",
+       "3     0.999464  0.597970  0.079366\n",
+       "4     0.999486  0.599486  0.111835\n",
+       "...        ...       ...       ...\n",
+       "5011  0.001073  0.994540  0.596380\n",
+       "5012  0.000547  0.990520  0.691322\n",
+       "5013  0.000527  0.991591  0.632839\n",
+       "5014  0.000519  0.992506  0.632940\n",
+       "5015  0.000000  0.988305  0.659860\n",
        "\n",
        "[5016 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preprocess_pipe.transform(test)"
+    "preprocess_pipe.fit_transform(test)"
    ]
   },
   {
