modified:   __pycache__/library1.cpython-38.pyc 	modified:   library1.py 	modified:   preprocess.ipynb

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -45,6 +45,7 @@
     "preprocess_pipe = Pipeline([\n",
     "    ('feature_selector', VolTempSelector('M')),\n",
     "    ('missing_value', handleMissingValue()),\n",
+    "    ('siff_smooth_df', DiffSmooth(0, 0, 0)),\n",
     "    ('pca', PCA(n_components = 3)),\n",
     "    ('minmax_scaler', MinMaxScaler()),\n",
     "    ('component_selector', ComponentSelector(3))\n",
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
        "[5016 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
