modified:   __pycache__/library1.cpython-38.pyc 	modified:   library1.py 	modified:   preprocess.ipynb

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,46 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = 'D:\\KU\\mlops\\data'\n",
-    "train_chg = pd.read_csv(path + '/data/raw_data/train/1000_chg.csv')\n",
-    "train_dchg = pd.read_csv(path + '/data/raw_data/train/1000_dchg.csv')\n",
+    "train = pd.read_csv(path + '/data/raw_data/train/1000_chg.csv')\n",
     "test = pd.read_csv(path + '/data/raw_data/test/Test05_NG_chg.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# chg 데이터와 dchg 데이터 합치기\n",
-    "train = pd.concat([train_chg, train_dchg])\n",
-    "train = train.reset_index(drop = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 파이프라인 이용해서 전처리 (library1의 pipeline_model class에 속한 코드)\n",
-    "preprocess_pipe = Pipeline([\n",
-    "    ('feature_selector', VolTempSelector('M')),\n",
-    "    ('missing_value', handleMissingValue()),\n",
-    "    ('siff_smooth_df', DiffSmooth(0, 0, 0)),\n",
-    "    ('pca', PCA(n_components = 3)),\n",
-    "    ('component_selector', ComponentSelector(3))\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -85,33 +57,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>29.840985</td>\n",
-       "      <td>5.316300</td>\n",
-       "      <td>-0.353807</td>\n",
+       "      <td>18.488237</td>\n",
+       "      <td>0.590387</td>\n",
+       "      <td>-0.223252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>29.843296</td>\n",
-       "      <td>5.314249</td>\n",
-       "      <td>-0.393306</td>\n",
+       "      <td>18.489667</td>\n",
+       "      <td>0.596742</td>\n",
+       "      <td>-0.252020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>29.843233</td>\n",
-       "      <td>5.314770</td>\n",
-       "      <td>-0.393314</td>\n",
+       "      <td>18.489788</td>\n",
+       "      <td>0.596241</td>\n",
+       "      <td>-0.252126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>29.840976</td>\n",
-       "      <td>5.316374</td>\n",
-       "      <td>-0.353807</td>\n",
+       "      <td>18.488254</td>\n",
+       "      <td>0.590316</td>\n",
+       "      <td>-0.223271</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>29.872686</td>\n",
-       "      <td>5.324142</td>\n",
-       "      <td>-0.322888</td>\n",
+       "      <td>18.520762</td>\n",
+       "      <td>0.590422</td>\n",
+       "      <td>-0.187038</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -120,69 +92,70 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11362</th>\n",
-       "      <td>-16.812496</td>\n",
-       "      <td>1.279979</td>\n",
-       "      <td>-0.575992</td>\n",
+       "      <th>6004</th>\n",
+       "      <td>-5.971993</td>\n",
+       "      <td>0.446718</td>\n",
+       "      <td>-0.086493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11363</th>\n",
-       "      <td>-16.812514</td>\n",
-       "      <td>1.280129</td>\n",
-       "      <td>-0.575996</td>\n",
+       "      <th>6005</th>\n",
+       "      <td>-5.937055</td>\n",
+       "      <td>0.458280</td>\n",
+       "      <td>-0.094755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11364</th>\n",
-       "      <td>-16.780960</td>\n",
-       "      <td>1.290132</td>\n",
-       "      <td>-0.606304</td>\n",
+       "      <th>6006</th>\n",
+       "      <td>-5.955181</td>\n",
+       "      <td>0.451977</td>\n",
+       "      <td>-0.083352</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11365</th>\n",
-       "      <td>-16.812219</td>\n",
-       "      <td>1.280235</td>\n",
-       "      <td>-0.560784</td>\n",
+       "      <th>6007</th>\n",
+       "      <td>-5.973104</td>\n",
+       "      <td>0.447482</td>\n",
+       "      <td>-0.080657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11366</th>\n",
-       "      <td>-16.812505</td>\n",
-       "      <td>1.280055</td>\n",
-       "      <td>-0.575993</td>\n",
+       "      <th>6008</th>\n",
+       "      <td>-5.951328</td>\n",
+       "      <td>0.453304</td>\n",
+       "      <td>-0.109746</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11367 rows × 3 columns</p>\n",
+       "<p>6009 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               0         1         2\n",
-       "0      29.840985  5.316300 -0.353807\n",
-       "1      29.843296  5.314249 -0.393306\n",
-       "2      29.843233  5.314770 -0.393314\n",
-       "3      29.840976  5.316374 -0.353807\n",
-       "4      29.872686  5.324142 -0.322888\n",
-       "...          ...       ...       ...\n",
-       "11362 -16.812496  1.279979 -0.575992\n",
-       "11363 -16.812514  1.280129 -0.575996\n",
-       "11364 -16.780960  1.290132 -0.606304\n",
-       "11365 -16.812219  1.280235 -0.560784\n",
-       "11366 -16.812505  1.280055 -0.575993\n",
+       "              0         1         2\n",
+       "0     18.488237  0.590387 -0.223252\n",
+       "1     18.489667  0.596742 -0.252020\n",
+       "2     18.489788  0.596241 -0.252126\n",
+       "3     18.488254  0.590316 -0.223271\n",
+       "4     18.520762  0.590422 -0.187038\n",
+       "...         ...       ...       ...\n",
+       "6004  -5.971993  0.446718 -0.086493\n",
+       "6005  -5.937055  0.458280 -0.094755\n",
+       "6006  -5.955181  0.451977 -0.083352\n",
+       "6007  -5.973104  0.447482 -0.080657\n",
+       "6008  -5.951328  0.453304 -0.109746\n",
        "\n",
-       "[11367 rows x 3 columns]"
+       "[6009 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preprocess_pipe.fit_transform(train)"
+    "preprocess = PreprocessPipe()\n",
+    "preprocess.fit_transform(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -300,21 +273,14 @@
        "[5016 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preprocess_pipe.fit_transform(test)"
+    "preprocess.fit_transform(test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
